<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SearchEndereco">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SearchCep_Title"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SeachCep_labelInput"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_location"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/editText_inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D5EDF2"
                android:inputType="number"
                app:mask="_____-___"
                app:maskCharacter="_"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_searchAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#D7F205"
            android:text="@string/SearchCep_Button"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/showAdress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cep_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cepDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cep_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logradouro_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logradouroDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logradouro_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complemento_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/complementoDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complemento_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bairro_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bairroDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bairro_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localidade_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/localidadeDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localidade_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uf_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ufDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uf_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddd_label"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dddDataAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddd_dado"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/progressBar_searchAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
